// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`decoding an array with multiple elements works 1`] = `
Array [
  Array [
    null,
    null,
  ],
  4,
]
`;

exports[`decoding an array with type null works 1`] = `
Array [
  Array [
    null,
  ],
  2,
]
`;

exports[`encoding an array of null returns expected value 1`] = `
"~
"
`;

exports[`packing an int returns them encoded 1`] = `"32"`;

exports[`packing decode works 1`] = `
Array [
  1,
  2,
]
`;

exports[`packing encode works 1`] = `
Array [
  "1",
  "2",
]
`;

exports[`unpacking an int works 1`] = `32`;

exports[`we can both encode and decode 1`] = `
"+abcd
~
+efgh
"
`;

exports[`we can both encode and decode 2`] = `
Array [
  Array [
    "abcd",
    null,
    "efgh",
  ],
  14,
]
`;
